# pi-py

./: .env.example  .gitignore  .pre-commit-config.yaml  DESIGN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md
docs/guides/: build-autoresearch-harness.md  build-finance-harness.md  orchestration.md  plugins.md
examples/agents/: research-analyst.md
examples/extensions/: audit_logger.py  circuit_breaker.py  cost_logger.py
examples/orchestration/: fanout.py  pipeline.py  supervisor.py
examples/simulations/: _helpers.py  conftest.py  run.py  test_bug_fixes.py  test_coding_agent_overlays.py  test_compaction.py  test_concurrent_agents.py  test_extension_failures.py  test_live_e2e.py  test_llm_failures.py  test_loop_termination.py  test_session_lifecycle.py  test_session_log_shape.py  test_skill_failures.py  test_tool_edge_cases.py  test_tui_subprocess.py  test_workspace_edge_cases.py
examples/skills/market-data/: SKILL.md
scripts/: smoke_pr17.py
src/pyharness/: __init__.py  _loader.py  agents.py  cli.py  compaction.py  config.py  events.py  extensions.py  harness.py  llm.py  queues.py  session.py  skills.py  types.py  workspace.py
src/pyharness/tools/: __init__.py  base.py
src/pyharness/tools/builtin/: __init__.py  bash.py  edit.py  glob_tool.py  grep.py  read.py  web_fetch.py  web_search.py  write.py
tests/: conftest.py  test_agents_skills.py  test_cli.py  test_config.py  test_extensions.py  test_loop.py  test_smoke.py  test_tools.py  test_workspace.py
work/py-harness/: DESIGN.md  README.md
work/py-harness/.github/workflows/: ci.yml
work/py-harness/docs/guides/: build-autoresearch-harness.md  build-finance-harness.md
work/py-harness/examples/skills/market-data/: tools.py
