[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pi-py"
version = "0.1.0"
description = "Headless Python agent harness for Claude / LLM coding agents — pluggable skills (SKILL.md), AGENTS.md, opt-in extensions, plugin entry points. Inspired by pi-mono."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "pi-py contributors" }]
keywords = [
    "agent",
    "agents",
    "ai-agent",
    "ai-agents",
    "llm",
    "llm-agent",
    "coding-agent",
    "claude",
    "claude-code",
    "anthropic",
    "agent-framework",
    "agent-sdk",
    "agentic",
    "agentic-ai",
    "litellm",
    "tool-use",
    "function-calling",
    "skills",
    "skills-md",
    "agents-md",
    "headless-agent",
    "pi-mono",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff==0.15.12",
    "pre-commit>=3.7",
]

[tool.setuptools.packages.find]
include = ["_workspace_root_no_packages"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "packages/pyharness-sdk/tests",
    "packages/coding-harness/tests",
    "packages/tui/tests",
    "examples/simulations",
]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["build", "dist", ".venv", "venv", "*.egg-info"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # bugbear
    "SIM",    # simplify
    "RUF",    # ruff-specific
    "C4",     # comprehensions
    "PIE",    # misc lints
]
ignore = [
    "E501",   # line-too-long (formatter handles long lines; long strings/URLs are fine)
    "B008",   # function-call-in-default-argument (Pydantic Field(default_factory=...) is fine)
    "SIM108", # ternary-in-if-else (sometimes the if/else is clearer)
    "RUF012", # mutable-class-attributes (we use ClassVar-like patterns on purpose)
]

[tool.ruff.lint.per-file-ignores]
# Tests can use bare asserts and re-import fixtures freely.
"**/tests/**" = ["B011", "F401", "F811"]
# Examples are illustrative; relax on naming and style.
"examples/**" = ["F401", "B"]

[tool.ruff.lint.isort]
known-first-party = ["pyharness", "coding_harness", "pyharness_tui"]

[tool.ruff.format]
docstring-code-format = false
